# beerstat

./: .gitignore  Makefile  README.md  beer_consumer.py  pyproject.toml  requirements.txt  test.py
app/: __init__.py  models.py  settings.py  utils.py
migrations/versions/: 371950a44837_initial_migration.py
services/: bot@beer_consumer.service  bs.gunlinux.ru.service
tests/: .coverage  test_basics.py  test_beer_consumer.py  test_integration.py
